--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,13 @@
 
 body {
   margin: 0;
+  padding: 0;
+  padding-bottom: 75px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #A02929;
+  /* background-color: #A02929; */
+  background: linear-gradient(135deg,rgb(255, 226, 226) 10%,#A02929 50%);
 }
 
 code {
@@ -17,3 +20,11 @@ code {
     monospace;
 }
 
+.bodystyle{
+  display: "flex";
+  align-items: "center";
+  justify-content: "center";
+  height: "100%";
+  padding-top:'5rem';
+  background-image: linear-gradient(to right,red,blue);
+}
