Added Teacher Dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,18 @@ code {
   padding-top:'5rem';
   background-image: linear-gradient(to right,red,blue);
 }
+
+.dropdown-container {
+  text-align: left;
+  border: 1px solid #ccc;
+  position: relative;
+  border-radius: 5px;
+}
+
+.dropdown-input {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  user-select: none;
+}
