--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #A02929; */
   background: linear-gradient(135deg,rgb(255, 226, 226) 10%,#A02929 50%);
+  padding-right: 7rem;
 }
 
 code {
